# alphasignal

./: .env.example  .gitignore  PROGRESS.md  README.md  docker-compose.yml  futurework.md
.github/workflows/: ci.yml
backend/: Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  main.py
backend/app/analysis/: claude_analyzer.py  prompts.py  strategy_parser.py
backend/app/api/: admin.py  alerts.py  backtest.py  news.py  search.py  sentiment.py  watchlist.py
backend/app/auth/: dependencies.py
backend/app/backtest/: engine.py
backend/app/db/: connection.py  models.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py  0002_add_watchlist.py  0003_add_backtest_tables.py
backend/app/ingestion/: akshare_news.py  rss_fetcher.py  sec_edgar.py  yfinance_news.py
backend/app/prices/: akshare_prices.py  yfinance_client.py
backend/app/scheduler/: tasks.py
backend/tests/unit/: test_api_health.py  test_auth.py  test_claude_analyzer.py  test_rss_fetcher.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: AlertsPanel.tsx  AuthNav.tsx  BacktestPanel.tsx  NewsFeed.tsx  SearchPanel.tsx  StockChart.tsx
