[project]
name = "alphasignal-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # LLM
    "anthropic>=0.40.0",

    # Data ingestion
    "feedparser>=6.0.11",        # RSS parsing
    "httpx>=0.27.0",             # async HTTP client
    "beautifulsoup4>=4.12.0",    # HTML cleaning
    "lxml>=5.2.0",               # fast XML parser for feedparser

    # Financial data
    "yfinance>=0.2.40",
    "akshare>=1.14.0",

    # Scheduling
    "apscheduler==3.10.4",

    # Auth
    "pyjwt[cryptography]>=2.8.0",    # Clerk JWT verification

    # Utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",           # retry logic for API calls
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
